# advent-of-code-2021

./: .gitignore
day1/src/: main.rs
day10/: Cargo.toml
day10/src/: main.rs
day11/: Cargo.toml
day11/src/: main.rs
day12/: Cargo.toml  example2.txt
day12/src/: main.rs
day13/: Cargo.toml
day13/src/: main.rs
day14/: Cargo.toml
day14/src/: main.rs
day15/src/: main.rs
day16/: Cargo.toml
day16/src/: main.rs
day17/: Cargo.toml
day17/src/: main.rs
day18/: Cargo.toml
day18/src/: main.rs
day19/: Cargo.toml
day19/src/: main.rs
day2/: Cargo.toml
day2/src/: main.rs
day20/: single_lit.txt
day20/src/: main.rs
day21/src/: main.rs
day22/: min1.txt
day22/src/: main.rs
day23/: Cargo.toml
day23/src/: main.rs
day24/: Cargo.toml  UB_value_example.txt  complex_no_op.txt  complex_peephole_example.txt  diagram1.txt  diagram2.txt  peephole_rule_ideas.txt  program_end.txt  proper_division_input_range_analysis.txt  pruned.txt  unused_result_detection_example.txt
day24/src/: main.rs  parser.rs  simulation.rs
day24/src/analysis/: mod.rs  range_analysis.rs  values.rs
day24/src_old/: parser.rs
day25/src/: main.rs
day3/: Cargo.toml
day3/src/: main.rs
day4/: Cargo.toml
day4/src/: main.rs
day5/: Cargo.toml  minified.txt
day5/src/: main.rs
day6/: Cargo.toml
day6/src/: main.rs
day7/: Cargo.toml  small.txt
day7/src/: main.rs
day8/: Cargo.toml
day8/src/: main.rs
day9/: Cargo.toml
day9/src/: main.rs
meta/: Cargo.toml
meta/src/: main.rs
