[package]
name = "meta"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
html-escape = "0.2.9"
lazy_static = "1.4.0"
reqwest = { version = "0.11.7", features = ["blocking", "cookies"] }
scraper = "0.12.0"
